add example for 14BDO synthesis

--- a/cobrapyconverter/GenomeScaleModels/templates/intermediate_step.html
+++ b/cobrapyconverter/GenomeScaleModels/templates/intermediate_step.html
@@ -20,7 +20,7 @@
 <div class="container">
 <form  action="/data" method = "POST" id="sample_form2" enctype="multipart/form-data">
  <label for="msg" id="msg">{{msg}} Pathways are discovered. It takes about 20 seconds to evaluate each pathway.
- You can adjust this number by reducing/increasign the maximum pathway length. Would you like to continue?
+ You can adjust this number by reducing/increasing the maximum pathway length. Would you like to continue?
  </label>
   <br>
     <a href="{{url_for('form')}}" class="btn btn-secondary"><button>return</button></a>
